--- a/cms/fe-web/render/body/new-contents.hbs
+++ b/cms/fe-web/render/body/new-contents.hbs
@@ -5,8 +5,16 @@
     <header class="contents__header">
         <h2 class="contents-title">{{name}}</h2>
         <div class="actions">
-            <button type="submit" title="Salva le modifiche">SAVE</button>
-            <a href="/cms/contents" title="torna ai contenuti">BACK</a>
+            <a class="back-btn" href="/cms/contents" title="torna ai contenuti">
+                <span class="typcn typcn-backspace">Back</span>
+
+            </a>
+            <button class="save-btn" type="submit" title="Salva le modifiche">
+                <span class="typcn typcn-export">Save</span>
+
+
+            </button>
+
         </div>
     </header>
     <section class="contents">
