--- a/cms/fe-web/render/include/fields/document-field.hbs
+++ b/cms/fe-web/render/include/fields/document-field.hbs
@@ -13,7 +13,7 @@
                     <input class="js-img-url" type="text" readonly value="{{value}}" name="{{name}}">
 
                 {{/if}}
-                <a href="javascript:void(0);" class="js-copy">
+                <a href="javascript:void(0);" title="Copy URL to Clipboard" class="js-copy">
                     <span class="typcn typcn-clipboard"></span>
                 </a>
                 </div>
