--- a/cms/static/less/_contents.less
+++ b/cms/static/less/_contents.less
@@ -4,6 +4,7 @@
   margin: 20px 0;
   font-size: 20px;
 }
+
 .content {
   &s {
     padding-top: 68px;
@@ -13,6 +14,7 @@
     }
     &__header {
       position: fixed;
+      z-index: 99999;
       top: 0;
       left: 0;
       width: 100%;
@@ -24,6 +26,32 @@
       border-bottom: 1px silver solid;
       h2{
 
+      }
+      .save-btn{
+        border: none;
+        background: none;
+        color: mediumseagreen;
+        font-size: 20px;
+
+        margin-left: 10px;
+        padding: 0;
+        line-height: 1;
+        cursor: pointer;
+        outline: none;
+&-cnt{
+  background: mediumseagreen;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
+        span{
+          margin: 0px -3px 4px 0;
+          display: block;
+        }
+      }
+      .back-btn{
+        font-size: 20px;
+        text-decoration: none;
       }
     }
   }
